added background image and card

--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/minty/bootstrap.min.css" integrity="sha384-H4X+4tKc7b8s4GoMrylmy2ssQYpDHoqzPa9aKXbDwPoPUA3Ra8PA5dGzijN+ePnH" crossorigin="anonymous">
-    <title>Document</title>
+    <title>TTU Group Survey</title>
 </head>
 <body>
-    <div></div>
+    <div class="bg-image d-flex align-items-center justify-content-center" style="background-image: url('Event_COE_Doner recognition and awards_04Nov2024_69481-Enhanced-NR.jpg'); background-size: cover; height:100vh;">
+        <form class ="card col-12 col-md-6 col-lg-4" id="frmLogin">
+            <div class="card-body">
+                <h1>Helloo cuz</h1>
+            </div>
+
+        </form>
+    </div>
+    
 </body>
 </html>
