--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,62 +9,66 @@
 
     <title>TTU Group Survey</title>
 </head>
+
 <body>
-    <div class="bg-image d-flex align-items-center justify-content-center" style="background-image: url('Event_COE_Doner recognition and awards_04Nov2024_69481-Enhanced-NR.jpg'); background-size: cover; height:100vh;">
-        <form class ="card col-12 col-md-6 col-lg-4" id="frmLogin">
+    <div class="bg-image d-flex align-items-center justify-content-center"
+        style="background-image: url('Event_COE_Doner recognition and awards_04Nov2024_69481-Enhanced-NR.jpg'); background-size: cover; height:100vh;">
+        <!-- Login -->
+        <form class="card col-12 col-md-6 col-lg-4" id="frmLogin">
             <div class="card-body">
                 <h2 class="text-center">TTU Group Survey Login</h2>
                 <h5 class="text-center">Login below</h5>
                 <div>
                     <label for="strUsername" class="form-label d-flex align-items-start">Email</label>
-                    <input id="strUsername" class="form-control mb-2" type="email" placeholder="JohnDoe@tntech.edu" aria-label="input for user Email">                     
-                </div> 
-
-                <div>
-                    <label for="strPassword" class="form-label d-flex align-items-start">Password</label> 
-                    <input id="strPassword" class="form-control mb-2" type="password" placeholder="Password">
+                    <input id="strUsername" class="form-control mb-2" type="email" placeholder="JohnDoe@tntech.edu"
+                        aria-label="input for user Email">
                 </div>
+                <label for="strPassword" class="form-label d-flex align-items-start">Password</label>
+                <input id="strPassword" class="form-control mb-2" type="password" placeholder="Password">
+                <button type="button" class="btn btn-primary col-12 mt-2" id="btnLogin">Login</button>
+                <button type="button" class="btn btn-link col-12 mt-0" id="btnSwap">Don't have an account? Register
+                    here</button>
 
-                <div class="text-right">
-                    <button type="button" class="btn btn-link" id="btnForgot">Forgot Password</button>
-                </div>
-            
-
-                <button  type="button" class="btn btn-primary col-12 mt-2" id="btnLogin">Login</button>
-                <button type="button" class="btn btn-link col-12 mt-2 " id="btnSwap">Don't have an account? Register here</button>
-
-
-             </div>
+            </div>
 
         </form>
-        <form class ="card col-12 col-md-6 col-lg-4" id="frmRegister" style="display:none;">
+        <!-- Registration -->
+        <form class="card col-12 col-md-6 col-lg-4" id="frmRegister" style="display:none;">
             <div class="card-body">
                 <h2 class="text-center">TTU Group Survey Registration</h2>
                 <h5 class="text-center">Register below</h5>
-                <div>
-                    <label for ="strFirstName" class="form-label d-flex align-items-start">First Name</label>
-                    <input id="strFirstName" class="form-control mb-2" type="text" placeholder="John" aria-label="input for user First Name">
-                </div>
-                <button  type="button" class="btn btn-primary col-12 mt-2" id="btnRegister">Register</button>
-                <button type="button" class="btn btn-link col-12 mt-0" id="btnBack">Already have an account? Login here</button>
-             </div>
+
+                <button type="button" class="btn btn-primary col-12 mt-2" id="btnRegister">Register</button>
+                <button type="button" class="btn btn-link col-12 mt-0" id="btnBack">Already have an account? Login
+                    here</button>
+
+            </div>
 
         </form>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script>
-        document.getElementById('btnSwap').addEventListener('click',function(){
+
+        if (sessionStorage.getItem('SessionID')) {
+            document.querySelector('#frmLogin').style.display = 'none'
+            document.querySelector('#divDashboard').style.display = 'block'
+        }
+
+        document.getElementById('btnSwap').addEventListener('click', function () {
             document.getElementById('frmLogin').style.display = 'none';
             document.getElementById('frmRegister').style.display = 'block';
         });
-        document.getElementById('btnBack').addEventListener('click',function(){
+        document.getElementById('btnBack').addEventListener('click', function () {
             document.getElementById('frmLogin').style.display = 'block';
             document.getElementById('frmRegister').style.display = 'none';
         })
     </script>
 
 
-    
+
 </body>
+
 </html>
