--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="bg-image d-flex align-items-center justify-content-center"
         style="background-image: url('Event_COE_Doner recognition and awards_04Nov2024_69481-Enhanced-NR.jpg'); background-size: cover; height:100vh;">
         <!-- Login -->
-        <form class="card col-12 col-md-6 col-lg-4" id="frmLogin">
+        <form class="card col-12 col-md-6 col-lg-4 rounded" id="frmLogin">
             <div class="card-body">
                 <h2 class="text-center">TTU Group Survey Login</h2>
                 <h5 class="text-center">Login below</h5>
@@ -32,7 +32,7 @@
 
         </form>
         <!-- Registration -->
-        <form class="card col-12 col-md-6 col-lg-4" id="frmRegister" style="display:none;">
+        <form class="card col-12 col-md-6 col-lg-4 rounded" id="frmRegister" style="display:none;">
             <div class="card-body">
                 <h2 class="text-center">TTU Group Survey Registration</h2>
                 <h5 class="text-center mb-4">Register below</h5>
