--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,8 +11,7 @@
 
 <body>
     <div class="bg-image d-flex align-items-center justify-content-center"
-        style="background-image: url('Event_COE_Doner recognition and awards_04Nov2024_69481-Enhanced-NR.jpg'); background-size: cover; height:100vh;">
-        <!-- Login -->
+    style="background-image: url('Event_COE_Doner recognition and awards_04Nov2024_69481-Enhanced-NR.jpg'); background-size: cover; height:100vh;">        <!-- Login -->
         <form class="card col-12 col-md-6 col-lg-4 rounded" id="frmLogin">
             <div class="card-body">
                 <h2 class="text-center">TTU Group Survey Login</h2>
