--- a/frontend/student.html
+++ b/frontend/student.html
@@ -16,6 +16,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
+          <li class ="nav-item">
+            <a class="nav-link active" id="Welcome" href="#" data-bs-target="tab">Welcome</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link active" id='viewClasses'href="#" data-bs-toggle="tab">View Classes</a>
           </li>
@@ -29,20 +32,22 @@
       </div>
     </div>
   </nav>
+  <form class="">
+
+  </form>
   <div class ="bg-image d-flex align-items-center justify-content-center" style="background-image: url('Scenes_Social_Spring_13Mar2024_17159.jpg'); background-size: cover; height: 100vh;">
-    <!-- Welcoming page -->
-     <div>
+    <!-- Welcome  -->
+     <div class="card col-12 col-md-6 col-lg-4 rounded" id="WelcomeTab">
+        <div class="card-body">
+          <h1 class="text-center">Welcome</h1>
+        </div>
+
       
-     </div>
-    <!-- Viewing classes -->
-     <div id="myClasses" class="tab-content active">
-      <h1>My classes</h1>
-
-
 
      </div>
 
-  </div>
+
+  
 
   
 </body>
@@ -53,10 +58,9 @@ crossorigin="anonymous"></script>
 <script>
 
 
-  // function when viewClasses is clicked
-  document.getElementById('viewClasses').addEventListener('click',function(){
-    document.getElementById('myClasses').style.display = 'block';
-  })
+ 
+  
+  
 
 
   // loggging out function
