--- a/frontend/index.html
+++ b/frontend/index.html
@@ -138,6 +138,46 @@
 </body>
 
 <script>
+
+    // Validation for Login Form
+document.querySelector("#btnLogin").addEventListener("click", (e) => {
+    e.preventDefault(); // Prevent form submission
+
+    const strEmail = document.querySelector("#strUsername").value.trim();
+    const strPassword = document.querySelector("#strPassword").value.trim();
+    console.log("Captured Password:", strPassword); // Debugging
+
+    const regEmail = /^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$/i;
+    const regPassword = /^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}$/;
+    let errors = "";
+
+    let blnError = false;
+    let strMessage = "";
+
+    if (!regEmail.test(strEmail)) {
+        blnError = true;
+        strMessage += "<p>Please enter a valid email address.</p>";
+    } 
+    if (!regPassword.test(strPassword)) {  // <-- FIXED: Separate condition
+        blnError = true;
+        strMessage += "<p>Please enter a valid password.</p>";
+    }
+
+    if (blnError) {
+        console.log("Error Message:", strMessage); // Debugging
+        Swal.fire({
+            title: "Error",
+            html: strMessage,
+            icon: "error",
+        });
+    } else {
+        Swal.fire({
+            title: "Success!",
+            text: "Login Successful!",
+            icon: "success"
+        });
+    }
+});
     // Validation for Registration Form
 document.querySelector("#btnRegister").addEventListener("click", (e) => {
     e.preventDefault(); // Prevent form submission
@@ -174,31 +214,7 @@ document.querySelector("#btnRegister").addEventListener("click", (e) => {
         errors += "<p class='mb-1 mt-1'>Passwords do not match</p>";
     }
 
-    // else if(role === 'Student'){
-    //     Swal.fire({
-    //         icon: "Success",
-    //         title: "Registration Successful",
-    //         Text: "Sending student to the student dashboard"
-    //     }).then(()=>{
-    //         window.location.href = "student.html";
-    //     })
-    // }else if(role === 'Instructor'){
-    //     Swal.fire({
-    //         icon: "Success",
-    //         title: "Registration Successful",
-    //         Text: "Sending student to the student dashboard"
-    //     }).then(()=>{
-    //         window.location.href = "instructor.html";
-    //     })
-
-    // } else{
-    //     Swal.fire({
-    //         icon:"error",
-    //         title: "Registration Error",
-    //         text: "Please select a valid role"
-    //     })
-    // }
-
+   //Role validation
     if (errors) {
         Swal.fire({
             title: "Registration Error!",
