--- a/frontend/index.html
+++ b/frontend/index.html
@@ -756,7 +756,7 @@
             Swal.fire({
                 icon: "success",
                 title: "Registration Successful",
-                text: "Sending student to the instructor dashboard"
+                text: "Sending faculty to the instructor dashboard"
             }).then(()=>{
                 document.getElementById("frmFacultyDash").style.display="block";
                 document.getElementById("frmRegister").style.display="none";
@@ -800,6 +800,8 @@
 
     
     }
+
+    
 
     document.getElementById('btnSwap').addEventListener('click',function(){
         document.getElementById('frmLogin').style.display = 'none';
