--- a/frontend/index.html
+++ b/frontend/index.html
@@ -344,6 +344,80 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Manage Courses Modal -->
+            <div class="modal fade" id="manageCoursesModal" tabindex="-1" aria-labelledby="manageCoursesModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="manageCoursesModalLabel">Manage Courses</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="d-flex justify-content-end mb-3">
+                                <button type="button" class="btn btn-success" id="btnAddNewCourse">
+                                    <i class="bi bi-plus-circle"></i> Add New Course
+                                </button>
+                            </div>
+                            <div id="coursesListContainer" class="list-group">
+                                <!-- Courses will be loaded here dynamically -->
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Add Course Modal -->
+            <div class="modal fade" id="addCourseModal" tabindex="-1" aria-labelledby="addCourseModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="addCourseModalLabel">Add New Course</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <form id="courseForm">
+                                <div class="mb-3">
+                                    <label for="courseName" class="form-label">Course Name</label>
+                                    <input type="text" class="form-control" id="courseName" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="courseNumber" class="form-label">Course Number</label>
+                                    <input type="text" class="form-control" id="courseNumber" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="courseSection" class="form-label">Section</label>
+                                    <input type="text" class="form-control" id="courseSection" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="courseTerm" class="form-label">Term</label>
+                                    <select class="form-select" id="courseTerm" required>
+                                        <option value="">Select Term</option>
+                                        <option value="Fall">Fall</option>
+                                        <option value="Spring">Spring</option>
+                                        <option value="Summer">Summer</option>
+                                    </select>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="startDate" class="form-label">Start Date</label>
+                                    <input type="date" class="form-control" id="startDate" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="endDate" class="form-label">End Date</label>
+                                    <input type="date" class="form-control" id="endDate" required>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                            <button type="button" class="btn btn-primary" id="btnSaveCourse">Save Course</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
             
             <!-- Add custom CSS for modal z-index -->
             <style>
